# CRM_simples

backend/: .gitignore  create_tables.py  main.py  pyproject.toml  test.db
backend/src/: main.py
backend/src/core/: db.py  security.py
backend/src/models/: __init__.py  clients.py  scheduling.py  service.py  users.py  vehicle.py
backend/src/repositories/: clients_crud.py  scheduling_crud.py  services_crud.py  users_crud.py  vehicles_crud.py
backend/src/routers/: clients.py  login.py  scheduling.py  services.py  users.py  vehicles.py
backend/src/schemas/: clients.py  scheduling.py  service.py  users.py  vehicle.py
backend/src/services/: user_service.py
backend/tests/: conftest.py  test_clients.py  test_connection.py  test_main.py  test_services.py  test_vehicles.py
frontend/: package-lock.json
frontend/src/: App.jsx
