[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "crisleyws", email = "crisleyws@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dev = "uvicorn src.main:app --reload"
worker = "python crm_mecanica/worker.py"
lint = "ruff check ."
format = "ruff format ."
